<resources>
    <string name="app_name">Voice Recorder</string>
    <string name="startButton">Start</string>
    <string name="stop">Stop</string>
    <string name="record_an_audio_file">Start recording!</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="test">Second Activity Active</string>
    <string name="menu">menu</string>
    <string name="title_activity_settings">Settings</string>

    <!--  Titles and summaries  -->
    <string name="audio_codec_title">Audio codec</string>
    <string name="audio_codec_summary">Choose the audio codec used for your recordings</string>


    <string name="sample_rate_title">Sample rate</string>
    <string name="sample_rate_summary">Select a larger rate for better quality audio (this will result in larger files)</string>

    <string name="output_title">Output format</string>
    <string name="output_summary">Choose the output format of your recordings</string>

    <string name="encoding_title">Bit rate</string>
    <string name="encoding_summary">Select a larger rate for better quality audio (this will result in larger files)</string>

    <string name="max_file_size_title">Max file size</string>
    <string name="max_file_size_summary">Choose the max file size for your recordings</string>


    <string name="keep_screen_awake_title">Keep screen awake</string>
    <string name="keep_screen_awake_summary">Keep the screen on while recording</string>


    <string name="do_not_disturb_title">Do not disturb</string>
    <string name="do_not_disturb_summary">Switches your phone to do not disturb mode while recording</string>

    <string name="inputText">Name your file here</string>
    <string name="changeButton">Save</string>
    <string name="about_this_app">About this app</string>
    <string name="about_the_settings">About the settings</string>
    <string name="audio_codec">Audio Codec</string>
    <string name="codex_text">An audio codec is the software that compresses and decompressed a digital audio signal.</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="sample_rate_text">Sample rate is the number of samples of audio carried per second, measured in Hz or kHz.</string>
    <string name="bit_rate">Bit Rate</string>
    <string name="bit_rate_text">Bitrate refers to the number of bits, or the amount of data, that are processed over a certain amount of time. In audio, this usually means kilobits per second.</string>
    <string name="output_format">Output Format</string>
    <string name="output_text">The format that your recording will be outputted in, e.g. MP4, 3GPP, etc.</string>
    <string name="explanation">This app was created for my Android App Development project as part of my Computer Science course at Brighton University.</string>
    <string name="my_name">Halil Olsen, 2020</string>
</resources>
