<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    tools:context=".About">

<!-- things to explain to the user in here:
           - bit rate
           - sample rate
           - codec
           - output format
           - who I am
           - how to use app
           - where recordings will save -->

    <TextView
        android:id="@+id/titleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/about_this_app"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleHeader"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_the_settings"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/audioCodecTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/audio_codec"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/audioCodecText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/audioCodecTitle"
        android:text="@string/codex_text"/>

    <TextView
        android:id="@+id/sampleRateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/audioCodecText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sample_rate"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/sampleRateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/sampleRateTitle"
        android:text="@string/sample_rate_text"/>

    <TextView
        android:id="@+id/bitRateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sampleRateText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/bit_rate"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/bitRateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/bitRateTitle"
        android:text="@string/bit_rate_text"/>

    <TextView
        android:id="@+id/outputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bitRateText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/output_format"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/outputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/outputTitle"
        android:text="@string/output_text"/>

    <TextView
        android:id="@+id/subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outputText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/explanation"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/myName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/my_name"
        android:textSize="12sp" />



</RelativeLayout>