<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundGrey"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/startButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/circle"
        android:text="@string/start_recording" />

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textAlignment="center"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="127dp"
        android:ems="10"
        android:hint="@string/inputText"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="129dp"
        android:layout_toEndOf="@+id/editText"
        android:background="@color/buttonGrey"
        android:text="@string/changeButton" />

</RelativeLayout>